--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game Play</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="game-board-wrapper">
+        <div class="game-board">
+
+        </div>
+    </div>
+
     <script type="module" src="app.js"></script>
 </body>
 
