--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
 <body>
     <div class="game-board-wrapper">
         <div class="game-board">
-
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
         </div>
     </div>
 
