--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game Play</title>
     <link rel="stylesheet" href="style.css">
+    <link type="image/png" sizes="50x50" rel="icon" href="https://img.icons8.com/ios/50/000000/play--v3.png">
 </head>
 
 <body>
