attach status bar and controls

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
 
 <body>
     <div class="game-board-wrapper">
+        <!-- status bar -->
+        <h2 class="title">Tic-tac-toe</h2>
+        <div class="players">
+            <h4>(X) Player-1</h4>
+            <h4>(O) Player-2</h4>
+        </div>
+
+        <!-- board -->
         <div class="game-board">
             <div class="cell"></div>
             <div class="cell"></div>
@@ -22,6 +30,11 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
+        </div>
+
+        <!-- controls -->
+        <div class="controls">
+            <button id="reset-btn" class="reset-btn">Restart</button>
         </div>
     </div>
 
