end lavel setup

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,15 @@
         <div class="controls">
             <button id="reset-btn" class="reset-btn">Restart</button>
         </div>
+
+        <!-- end game lavel -->
+        <div id="end-window" class="end-display">
+            <div id="re-play" class="icon-bar">
+                <img
+                    src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-refresh-arrows-flatart-icons-flat-flatarticons.png" />
+            </div>
+            <h4 id="won-status">Player 1 Won!</h4>
+        </div>
     </div>
 
     <script type="module" src="app.js"></script>
