[add] board creator

--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,7 @@
         </div>
 
         <!-- board -->
-        <div class="game-board">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
+        <div class="game-board" id="t-g-board"></div>
 
         <!-- controls -->
         <div class="controls">
