[init] v1.1 with parcel

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game Play</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link type="image/png" sizes="50x50" rel="icon" href="https://img.icons8.com/ios/50/000000/play--v3.png">
+    <script type="module" defer src="./app.ts"></script>
 </head>
 
 <body>
@@ -36,8 +37,6 @@
             <h4 id="won-status">Player 1 Won!</h4>
         </div>
     </div>
-
-    <script type="module" src="app.js"></script>
 </body>
 
 </html>
