[replace] remote images by local images

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game Play</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link type="image/png" sizes="50x50" rel="icon" href="https://img.icons8.com/ios/50/000000/play--v3.png">
+    <link type="image/png" sizes="50x50" rel="icon" href="./assets/images/favicon.png">
     <script type="module" defer src="./app.ts"></script>
 </head>
 
@@ -28,11 +28,10 @@
             <button id="reset-btn" class="reset-btn">Restart</button>
         </div>
 
-        <!-- end game lavel -->
+        <!-- end game level -->
         <div id="end-window" class="end-display">
             <div id="re-play" class="icon-bar">
-                <img
-                    src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/64/000000/external-refresh-arrows-flatart-icons-flat-flatarticons.png" />
+                <img src="./assets/images/refresh.png" alt="Restart game" />
             </div>
             <h4 id="won-status">Player 1 Won!</h4>
         </div>
