[add] settings button

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
 
         <!-- controls -->
         <div class="controls">
-            <button id="reset-btn" class="reset-btn">Restart</button>
+            <button id="reset-btn" class="btn">Restart</button>
+            <button id="setting-btn" class="btn">Settings</button>
         </div>
 
         <!-- end game level -->
