--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
         <!-- controls -->
         <div class="controls">
             <button id="reset-btn" class="btn">Restart</button>
-            <button id="setting-btn" class="btn">Settings</button>
+            <button id="setting-btn" class="btn"
+                onclick="document.getElementById('config-modal').style.display = 'flex'">Settings</button>
         </div>
 
         <!-- end game level -->
@@ -35,6 +36,30 @@
                 <img src="./assets/images/refresh.png" alt="Restart game" />
             </div>
             <h4 id="won-status">Player 1 Won!</h4>
+        </div>
+
+        <!-- Config modal -->
+        <div class="modal" id="config-modal">
+            <form id="board-config-form" class="config-form">
+                <h4 style="text-align: center;text-transform: uppercase;">Board <span
+                        style="color: #006781;">configuration</span></h4>
+                <label for="input-width">Width</label>
+                <input type="text" name="width" id="input-width" placeholder="Width" required>
+                <label for="input-height">Height</label>
+                <input type="text" name="height" id="input-height" placeholder="Height" required>
+                <label for="input-rows">Size</label>
+                <div class="flexible">
+                    <input class="half-width" type="text" name="rows" id="input-rows" placeholder="Rows" required>
+                    <input class="half-width" type="text" name="cols" id="input-cols" placeholder="Columns" required>
+                </div>
+                <label for="input-spaces">Spaces</label>
+                <input type="text" name="spaces" id="input-spaces" placeholder="Spaces" required>
+                <label for="input-wincase">Win case</label>
+                <input type="text" name="win-case" id="input-wincase" placeholder="Win case" required>
+                <button type="submit">Save</button>
+                <button type="reset"
+                    onclick="document.getElementById('config-modal').style.display = 'none'">Cancel</button>
+            </form>
         </div>
     </div>
 </body>
