[add] player's turn status

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         <!-- status bar -->
         <h2 class="title">Tic-tac-toe</h2>
         <div class="players">
-            <h4>(X) Player-1</h4>
-            <h4>(O) Player-2</h4>
+            <h4 id="player1" class="turn-status turn">(X) Player-1</h4>
+            <h4 id="player2" class="turn-status">(O) Player-2</h4>
         </div>
 
         <!-- board -->
