--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,7 @@
         <!-- controls -->
         <div class="controls">
             <button id="reset-btn" class="btn">Restart</button>
-            <button id="setting-btn" class="btn"
-                onclick="document.getElementById('config-modal').style.display = 'flex'">Settings</button>
+            <button id="setting-btn" class="btn">Settings</button>
         </div>
 
         <!-- end game level -->
